--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
 # dependencies
 node_modules/
 
 # Native build
-andriod/
+android/
 ios/
 
 # Expo
