--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.3.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
     "expo-build-properties": "~0.14.6",
