--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@eslint/config-helpers": "^0.2.2",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "prettier": "^3.5.3",
     "typescript": "~5.8.3"
   },
   "private": true
