--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
     "nativewind": "^4.1.23",
+    "path": "^0.12.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
@@ -58,12 +59,14 @@
     "@babel/core": "^7.25.2",
     "@eslint/config-helpers": "^0.2.2",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/node": "^22.15.29",
     "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "prettier": "^3.5.3",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3"
   },
   "private": true
