--- a/package.json
+++ b/package.json
@@ -3,12 +3,42 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "lint": "expo lint",
-    "build-apk": "eas build --platform android --profile preview --local"
+    "build-apk": "eas build --platform android --profile preview --local",
+    "start": "cross-env EXPO_NO_DOTENV=1 expo start",
+    "prebuild": "cross-env EXPO_NO_DOTENV=1 pnpm expo prebuild",
+    "android": "cross-env EXPO_NO_DOTENV=1 expo run:android",
+    "ios": "cross-env EXPO_NO_DOTENV=1 expo run:ios",
+    "web": "cross-env EXPO_NO_DOTENV=1 expo start --web",
+    "xcode": "xed -b ios",
+    "doctor": "npx expo-doctor@latest",
+    "preinstall": "npx only-allow pnpm",
+    "start:staging": "cross-env APP_ENV=staging pnpm run start",
+    "prebuild:staging": "cross-env APP_ENV=staging pnpm run prebuild",
+    "prebuild:development": "cross-env APP_ENV=development pnpm run prebuild",
+    "android:staging": "cross-env APP_ENV=staging pnpm run android",
+    "ios:staging": "cross-env APP_ENV=staging pnpm run ios",
+    "start:production": "cross-env APP_ENV=production pnpm run start",
+    "prebuild:production": "cross-env APP_ENV=production pnpm run prebuild",
+    "android:production": "cross-env APP_ENV=production pnpm run android",
+    "ios:production": "cross-env APP_ENV=production pnpm run ios",
+    "build:development:ios": "cross-env APP_ENV=development EXPO_NO_DOTENV=1 eas build --profile development --platform ios",
+    "build:development:android": "cross-env APP_ENV=development EXPO_NO_DOTENV=1 eas build --profile development --platform android ",
+    "build:staging:ios": "cross-env APP_ENV=staging EXPO_NO_DOTENV=1 eas build --profile staging --platform ios",
+    "build:staging:android": "cross-env APP_ENV=staging EXPO_NO_DOTENV=1 eas build --profile staging --platform android ",
+    "build:production:ios": "cross-env APP_ENV=production EXPO_NO_DOTENV=1 eas build --profile production --platform ios",
+    "build:production:android": "cross-env APP_ENV=production EXPO_NO_DOTENV=1 eas build --profile production --platform android ",
+    "prepare": "husky",
+    "app-release": "cross-env SKIP_BRANCH_PROTECTION=true np --no-publish --no-cleanup --no-release-draft",
+    "version": "pnpm run prebuild && git add .",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "type-check": "tsc  --noemit",
+    "lint:translations": "eslint ./src/translations/ --fix --ext .json  ",
+    "test": "jest",
+    "check-all": "pnpm run lint && pnpm run type-check && pnpm run lint:translations && pnpm run test",
+    "test:ci": "pnpm run test --coverage",
+    "test:watch": "pnpm run test --watch",
+    "install-maestro": "curl -Ls 'https://get.maestro.mobile.dev' | bash",
+    "e2e-test": "maestro test .maestro/ -e APP_ID=com.obytes.development"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
