--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "build-apk": "eas build --platform android --profile preview --local",
-    "start": "cross-env EXPO_NO_DOTENV=1 expo start",
+    "start": "cross-env EXPO_NO_DOTENV=1 expo start --dev-client",
     "prebuild": "cross-env EXPO_NO_DOTENV=1 expo prebuild",
     "android": "cross-env EXPO_NO_DOTENV=1 expo run:android",
     "ios": "cross-env EXPO_NO_DOTENV=1 expo run:ios",
@@ -29,7 +29,7 @@
     "prepare": "husky",
     "app-release": "cross-env SKIP_BRANCH_PROTECTION=true np --no-publish --no-cleanup --no-release-draft",
     "version": "npm run prebuild && git add .",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "clear && eslint . --ext .js,.jsx,.ts,.tsx",
     "type-check": "tsc  --noemit",
     "lint:translations": "eslint ./src/translations/ --fix --ext .json  ",
     "test": "jest",
@@ -87,17 +87,20 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@eslint/config-helpers": "^0.2.2",
+    "@eslint/js": "^9.28.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^22.15.29",
     "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
-    "eslint": "^9.25.0",
+    "eslint": "^9.28.0",
     "eslint-config-expo": "~9.2.0",
+    "globals": "^16.2.0",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.33.1"
   },
   "private": true
 }
