--- a/.env.staging
+++ b/.env.staging
@@ -1,6 +1,4 @@
-API_URL=https://dummyjson.com/
-
 ## TODO: add the variable to your  CI and remove it from here, not recommended setting sensitive values on your git repo
-SECRET_KEY=my-secret-key
-VAR_NUMBER=10 # this is a number variable
-VAR_BOOL=true # this is a boolean variable
+API_URL=https://rest.trip-nus.com
+GOOGLE_API_KEY=AIzaSyD2MxqysyNtpEj0-yHnYhOI_Tgkx4x8Ci0
+SUPABASE_STORAGE_URL=https://mvmxgiflitlviqimsips.supabase.co/storage/v1/object/public
