--- a/eas.json
+++ b/eas.json
@@ -4,6 +4,12 @@
     "appVersionSource": "remote"
   },
   "build": {
+    "preview": {
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      }
+    },
     "production": {
       "channel": "production",
       "distribution": "store",
