--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "tailwindcss": "^3.4.17",
     "zod": "^3.25.51",
     "zustand": "^5.0.5",
-    "expo-dev-client": "~5.2.0"
+    "expo-dev-client": "~5.2.0",
+    "expo-updates": "~0.28.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
