Change schema of database

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "expo-blur": "~14.1.5",
     "expo-build-properties": "~0.14.6",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.0",
     "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
@@ -67,6 +68,8 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.8",
+    "expo-task-manager": "^13.1.5",
+    "expo-updates": "~0.28.14",
     "expo-web-browser": "~14.1.6",
     "nativewind": "^4.1.23",
     "path": "^0.12.7",
@@ -82,9 +85,7 @@
     "react-native-webview": "^13.13.5",
     "tailwindcss": "^3.4.17",
     "zod": "^3.25.51",
-    "zustand": "^5.0.5",
-    "expo-dev-client": "~5.2.0",
-    "expo-updates": "~0.28.14"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
