--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "^13.13.5",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.17",
     "zod": "^3.25.51",
     "zustand": "^5.0.5"
