--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@react-navigation/stack": "^7.3.3",
     "app-icon-badge": "^0.1.2",
     "babel-plugin-module-resolver": "^5.0.2",
+    "clsx": "^2.1.1",
     "expo": "~53.0.10",
     "expo-blur": "~14.1.5",
     "expo-build-properties": "~0.14.6",
